@@ -130,7 +130,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_ConfigurationName="Release" BuildVersion_UpdateFileVersion="False" BuildVersion_UpdateAssemblyVersion="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" />
+      <UserProperties BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="False" BuildVersion_UpdateFileVersion="False" BuildVersion_ConfigurationName="Release" />
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
@@ -144,6 +144,7 @@ if "$(ConfigurationName)" == "Release (Public)" SET zip=$(ProjectDir)bin\Terrari
 IF EXIST "%25zip%25" DEL "%25zip%25"
 "C:\Program Files\WinRAR\WINRAR.exe" a -ep1 "%25zip%25" "$(TargetDir)TerrariaPatcher.exe" "$(TargetDir)PluginLoader.dll" "$(TargetDir)Mono.Cecil.dll" "$(ProjectDir)changelog.txt"
 "C:\Program Files\WinRAR\WINRAR.exe" a -ep1 -apPlugins "%25zip%25" "$(ProjectDir)\TranscendPlugins\*.cs"
+"C:\Program Files\WinRAR\WINRAR.exe" a -ep1 -r -apPlugins\Shared "%25zip%25" "$(ProjectDir)\TranscendPlugins\Shared\*.cs"
 
 SET zip=$(ProjectDir)bin\TerrariaPatcher.v%25CURRENT_VERSION%25.src.zip
 IF EXIST "%25zip%25" DEL "%25zip%25"
@@ -153,6 +154,7 @@ cd "$(SolutionDir)"
 "C:\Program Files\WinRAR\WINRAR.exe" a "%25zip%25" "PluginLoader\*.*"
 "C:\Program Files\WinRAR\WINRAR.exe" a "%25zip%25" "PluginLoader\Properties"
 "C:\Program Files\WinRAR\WINRAR.exe" a "%25zip%25" "TranscendPlugins\*.*"
+"C:\Program Files\WinRAR\WINRAR.exe" a -r "%25zip%25" "TranscendPlugins\Shared\*.*"
 "C:\Program Files\WinRAR\WINRAR.exe" a "%25zip%25" "TranscendPlugins\Properties"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
